--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Novomax</title>
+  <title>Novozub</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./favicon/novozub.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/novozub.png">
 </head>
 
 <body>
