--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Dental clinic in Kolin">
+  <meta name="keywords" content="Dentistry">
+  <meta name="author" content="heeeyooo.studio">
   <title>Novozub</title>
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="./favicon/novozub.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/novozub.png">
+  <link rel="icon" type="image/x-icon" href="./favicon/novozub-cz-v2.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/novozub-cz-v2.png">
 </head>
 
 <body>
