--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="author" content="heeeyooo.studio">
   <title>Novozub</title>
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="./favicon/novozub-cz-v2.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/novozub-cz-v2.png">
+  <link rel="icon" type="image/x-icon" href="./favicons/novozub-cz-v2.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/novozub-cz-v2.png">
 </head>
 
 <body>
