--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="keywords" content="Dentistry">
   <meta name="author" content="heeeyooo.studio">
   <title>Novozub</title>
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="./favicons/novozub-cz-v2.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/novozub-cz-v2.png">
+  <!-- Favicons -->
+  <link rel="icon" type="image/x-icon" href="./favicons/novozub-cz-v3.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/novozub-cz-v3.png">
 </head>
 
 <body>
