--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Dental clinic in Kolin">
   <meta name="keywords" content="Dentistry">
   <meta name="author" content="heeeyooo.studio">
-  <title>Novozub</title>
+  <title>Prozubik</title>
 
   <!-- Favicons -->
 
