--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Dental clinic in Kolin">
-  <meta name="keywords" content="Dentistry">
   <meta name="author" content="heeeyooo.studio">
+  <meta name="description" content="Zubní klinika v Kolíně">
+  <meta name="keywords" content="Dentistry, Dental clinic">
+  <meta http-equiv="Content-Language" content="cs">
+  <meta name="robots" content="index, follow">
   <title>Prozubik</title>
 
   <!-- Favicons -->
 
-  <link rel="icon" type="image/x-icon" href="./favicons/novozub-cz-v3.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/novozub-cz-v3.png">
+  <link rel="icon" type="image/x-icon" href="/favicons/novozub-cz-v3.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/novozub-cz-v3.png">
 </head>
 
 <body>
