--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="cs">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="author" content="heeeyooo studio" />
+		<meta name="description" content="Zubní klinika v Kolíně" />
+		<meta
+			name="keywords"
+			content="dentistry, 
+              dental clinic, 
+              zubní klinika v Kolíně"
+		/>
+		<meta http-equiv="Content-Language" content="cs" />
+		<meta name="robots" content="index, follow" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="heeeyooo.studio">
-  <meta name="description" content="Zubní klinika v Kolíně">
-  <meta name="keywords" content="Dentistry, Dental clinic">
-  <meta http-equiv="Content-Language" content="cs">
-  <meta name="robots" content="index, follow">
-  <title>Prozubik</title>
+		<!-- Favicons -->
+		<link rel="icon" type="image/x-icon" href="/favicons/novozub-cz-v3.svg" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/favicons/novozub-cz-v3.png"
+		/>
+		<title>Prozubik</title>
+	</head>
 
-  <!-- Favicons -->
-
-  <link rel="icon" type="image/x-icon" href="/favicons/novozub-cz-v3.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/novozub-cz-v3.png">
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
