--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<meta name="robots" content="index, follow" />
 
 		<!-- Favicons -->
-		<link rel="icon" type="image/x-icon" href="/favicons/novozub-cz-v4.svg" />
+		<link rel="icon" type="image/x-icon" href="/favicons/prozubik-v4.svg" />
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/favicons/novozub-cz-v4.png"
+			href="/favicons/prozubik-v4.png"
 		/>
 		<title>Prozubik</title>
 	</head>
