Add meta desc for each page and fix bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="heeeyooo studio" />
-		<meta name="description" content="Zubní klinika v Kolíně" />
+		<meta
+			name="description"
+			content="Moderní zubní klinika v Kolíně. Nabízíme bezbolestné ortodontické ošetření pomocí analgosedace i celkové anestezie. Komfortní prostředí, profesionální péče a dostupné služby pro zdravý úsměv."
+		/>
 		<meta
 			name="keywords"
 			content="dentistry, 
