--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="heeeyooo studio" />
-		<meta
+		<!-- <meta
 			name="description"
 			content="Moderní zubní klinika v Kolíně. Nabízíme bezbolestné ortodontické ošetření pomocí analgosedace i celkové anestezie. Komfortní prostředí, profesionální péče a dostupné služby pro zdravý úsměv."
-		/>
+		/> -->
 		<meta
 			name="keywords"
 			content="dentistry, 
@@ -24,7 +24,7 @@
 			sizes="180x180"
 			href="/favicons/prozubik-v4.png"
 		/>
-		<title>Prozubik</title>
+		<!-- <title>Prozubik</title> -->
 	</head>
 
 	<body>
