--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="robots" content="index, follow" />
 
 		<!-- Favicons -->
-		<link rel="icon" type="image/x-icon" href="/favicons/prozubik-v4.svg" />
+		<link rel="icon" type="image/x-icon" href="/favicons/prozubik-fi-260.svg" />
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
